--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,7 +22,7 @@
             text-align: center;
             color: #FFFFFF;
             letter-spacing: 1px;
-            text-shadow: 3px 6px 5.5px #000;
+            text-shadow: 3px 6px 6.5px #000;
         }
     }
     .nav_bottom{
@@ -34,6 +34,9 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                img{
+                    height: 41px;
+                }
             }
             .ul_list{
                 display: flex;
@@ -47,18 +50,31 @@
                         color: white;
                         text-decoration: none;
                         font-size: 16px;
-                        img{
-                            height: 41px;
-                        }
                         #icon{
                             font-size: 30px;
+                        }
+                        i{
+                            font-size: 18px;
                         }
                     }
                 }
             }
             .list_ionc{
+                display: flex;
+                align-items: center;
+                list-style-type: none;
+                justify-content: center;
+                padding: 10px 0px;
                 li{
                     padding: 0px 15px;
+                    a{
+                        color: white;
+                        text-decoration: none;
+                        font-size: 16px;
+                        #icon{
+                            font-size: 30px;
+                        }
+                    }
                 }
             }
         }
@@ -69,11 +85,31 @@
         background: #D9D9D9;
         border: 1px solid #D9D9D9;
         padding: 20px 20px;
-        border-radius: 5px;
         display: flex;
         align-items: center;
         justify-content: space-between;
         margin: 10px 30px;
+    input{
+        border: none;
+        outline: none;
+        background: none;
+        width: 100%;
+        color: #000;
+        font-size: 18px;
+        font-weight: 700;
+    }
+    }
+    .input_text1{
+        width: 320px;
+        height: 45px;
+        background: #D9D9D9;
+        border: 1px solid #D9D9D9;
+        padding: 20px 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 10px 30px;
+        display: none;
     input{
         border: none;
         outline: none;
@@ -99,7 +135,6 @@
                     width: 288px;
                     height: 76px;
                     border: 1px solid #000;
-                    border-radius: 5px;
                     cursor: pointer;
                     a{
                         text-transform: uppercase;
@@ -211,7 +246,6 @@
                 background: #9747FF;
                 padding: 20px 60px;
                 border: 2px solid #FFFFFF;
-                border-radius: 15px;
                 a{
                     text-decoration: none;
                     font-size: 30px;
@@ -231,20 +265,6 @@
             position: absolute;
             right: 0;
             bottom: 0;
-        }
-    }
-    .list_icon{
-        width: 100%;
-        position: relative;
-        &-content{
-            max-width: 1200px;
-            margin: 0 auto;
-            padding-top: 12px;
-            .icon_list{
-                img{
-                    width: 100%;
-                }
-            }
         }
     }
     .footer_end{
@@ -291,8 +311,8 @@
 .heart{
     position: absolute;
     z-index: 1000;
-    bottom: 118px;
-    right: 22px;
+    bottom: 78px;
+    right: -10px;
     img{
         width: 30px;
     }
@@ -339,52 +359,32 @@
     }
 }
 // Import Range Price
-@import './Range_.scss';
+@import './content_scss/Range_.scss';
 //Custom checkbox
-@import './form_.scss';
+@import './content_scss/form_.scss';
 //Import Cricle color
-@import './color_cricle_.scss';
-.button_apply{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    background-color: #000;
-    margin: 40px 0px;
-    border-radius: 30px;
-    cursor: pointer;
-    button{
-        background: none;
-        outline: none;
-        text-align: center;
-        border: none;
-        padding: 15px 0px;
-        a{
-            text-decoration: none;
-            color: #FFFFFF;
-            font-size: 20px;
-        }
+@import './content_scss/color_cricle_.scss';
+//Import Like Button and Button
+@import './content_scss/heart_button_.scss';
+//Responsive website
+@import './responsive.scss';
+
+.menu{
+    display: none;
+}
+.img_center{
+    display: none;
+    img{
+        height: 41px;
     }
 }
-.button_load{
-    position: absolute;
-    right: 20px;
-    bottom: -90px;
-    background: #FFFFFF;
-    padding: 15px 70px;
-    border: 1px solid #9747FF;
-    border-radius: 40px;
-    cursor: pointer;
-    button{
-        background: none;
-        outline: none;
-        border: none;
-        color: #000000;
-        a{
-            text-decoration: none;
-            font-size: 20px;
-            text-transform: uppercase;
-            font-weight: bold;
-            color: #6F00FF;
-        }
-    }
+.img2{
+    display: none;
+    object-fit: cover;
+    background-size: cover;
+    object-position: center;
+    background-repeat: no-repeat;
+}
+.content_left1{
+    display: none;
 }
